--- a/src/ray/protobuf/BUILD
+++ b/src/ray/protobuf/BUILD
@@ -245,6 +245,22 @@ python_grpc_compile(
     deps = [":event_proto"],
 )
 
+proto_library(
+    name = "export_task_event_proto",
+    srcs = ["export_api/export_task_event.proto"],
+    deps = [":common_proto"],
+)
+
+cc_proto_library(
+    name = "export_task_event_cc_proto",
+    deps = [":event_proto"],
+)
+
+python_grpc_compile(
+    name = "export_task_event_py_proto",
+    deps = [":event_proto"],
+)
+
 # Job agent.
 proto_library(
     name = "job_agent_proto",
